--- a/labs/03_use_tekton_catalog/pipeline.yaml
+++ b/labs/03_use_tekton_catalog/pipeline.yaml
@@ -1,20 +1,25 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
-metadata:  
+metadata:
   name: cd-pipeline
 spec:
+  workspaces:
+    - name: pipeline-workspace
   params:
     - name: repo-url
     - name: branch
       default: "master"
   tasks:
     - name: clone
+      workspaces:
+      - name: output
+        workspace: pipeline-workspace
       taskRef:
-        name: checkout
+        name: git-clone
       params:
-      - name: repo-url
+      - name: url
         value: "$(params.repo-url)"
-      - name: branch
+      - name: revision
         value: "$(params.branch)"
 
     - name: lint
